fix code smells major